* Fix overflow styles. * Change text.

--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body {
 #main {
   padding: 3rem;
   height: 100vh;
+  overflow-y: auto;
 }
 
 @media (max-width: 640px) {
@@ -89,12 +90,10 @@ li strong {
 }
 
 ::-webkit-scrollbar-track {
-  /* background-color: #e7e7e7; */
   background-color: #3333338e;
   border: 1px solid #333;
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: #e7e7e7c5;
-  /* background-color: #333; */
 }
